--- a/CustomerKYC/WebApplication3/WebForms/Site1.Master
+++ b/CustomerKYC/WebApplication3/WebForms/Site1.Master
@@ -149,7 +149,7 @@
                     <!-- contact_details -->
                 </div>
                 <!-- end widget -->
-                <div class="widget col-lg-3 col-md-3 col-sm-12">
+               <%-- <div class="widget col-lg-3 col-md-3 col-sm-12">
                     <h4 class="title">Flickr Stream</h4>
                     <ul class="flickr">
                         <li><a href="#">
@@ -171,7 +171,7 @@
                     </ul>
                 </div>
                 <!-- end widget -->
-            </div>
+            </div>--%>
             <!-- end container -->
 
             <div class="copyrights">
