--- a/CustomerKYC/WebApplication3/WebForms/Site1.Master
+++ b/CustomerKYC/WebApplication3/WebForms/Site1.Master
@@ -86,9 +86,9 @@
                         <div id="nav" class="right">
                             <div class="container clearfix">
                                 <ul id="jetmenu" class="jetmenu blue">
-                                    <li><a href="Home.aspx">Home</a></li>
-                                  
-                                    <li><a href="about.aspx">About Us</a></li>
+                                    <li><a href="#">Services</a></li>
+                                  <li><a href="#">Contact</a></li>
+                                    <li><a href="#">About Us</a></li>
 
                                 </ul>
                             </div>
@@ -192,11 +192,11 @@
                     <div class="col-lg-6 col-md-6 col-sm-12 columns text-right">
                         <div class="footer-menu right">
                             <ul class="menu">
-                                <li><a href="index.html">Home</a></li>
+                                <li><a href="#">Home</a></li>
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="#">Sitemap</a></li>
                                 <li><a href="#">Site Terms</a></li>
-                                <li><a href="contact">Contact</a></li>
+                                <li><a href="#">Contact</a></li>
 <%--                                <asp:LinkButton ID="LinkButton1" runat="server" OnClick="Logout">LinkButton</asp:LinkButton>--%>
                             </ul>
                         </div>
